--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ html,body,#wrapper{font-size:10pt!important}
 
 
   </head>
-<body class="normal firstload">
+<body class="normal">
   <div id="wrapper">
 <h1 id="grand-gesture">Grand gesture</h1>
 
@@ -105,6 +105,14 @@ html,body,#wrapper{font-size:10pt!important}
 <p>Om in de tekening, die na bovenstaande is vastgelegd in variabele <strong>schets</strong>, de muisposties zichtbaar te maken, maken we een tekenopdracht:</p>
 
 <p><img src="images/tekenSchetsMetPuntenBlok.png" alt="Blok om schets te tekenen" /></p>
+
+<h3 id="de-schets-re-samplen-naar-een-vast-aantal-punten.">De schets <em>re samplen</em> naar een vast aantal punten.</h3>
+
+<p>Het blijkt nog best lastig te zijn om helder uit te leggen hoe je een schets met, zeg, 150 punten <em>resampled</em> naar 64 punten. Het idee is in grote lijnen om eerste de lengte van de schets te bepalen, door de lengtes van alle segmenten bij elkaar op te tellen. Vervolgens deel je die lengte door het gewenste aantal punten min één, om de afstand te bepalen tussen de punten in de nieuwe lijst. Daarna loop je de oude schets af, waarbij je na iedere <em>segment lengte</em> een nieuw punt aan de lijst toevoegt.</p>
+
+<p>Heronder zie je de complete code. Je kan die ook <a href="https://github.com/xota/grandGesture/images/beperkSchetsTotAantalPunten.xml">downloaden</a> en vervolgens in je eigen project importeren met import of door slepen vanuit downloadmap naar Snap!-project. Wie tijd over heeft bouwt het zelf met deze afbeelding als leidraad.</p>
+
+<p><img src="images/beperkSchetsTotAantalPunten.png" alt="Beperk schets tot aantal punten" /></p>
 
 <h2 id="opties-voor-verbetering">Opties voor verbetering</h2>
 
