--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@ html,body,#wrapper{font-size:10pt!important}
 
 <p><img src="images/beperkSchetsTotAantalPunten.png" alt="Beperk schets tot aantal punten" /></p>
 
+<h3 id="schets-toevoegen-aan-voorbeelden">Schets toevoegen aan voorbeelden</h3>
+
+<p>Zeker in het begin, maar wie weet ook later als je nieuwe vormen wil toevoegen, wil je de computer leren wat de schets voorstelt. Voor bedieningsgemak maak ik dat vast aan de toets <strong>1</strong>.<br/>
+Eenmalig heb ik een variabele <strong>voorbeelden</strong> aangemaakt en <em>geïnitialiseerd</em> als lege lijst: <img src="images/intialiseerVoorbeeldenAlsLegeLijst.png" alt="Voorbeelden geïnitialiseerd als lege lijst" /></p>
+
+<p><img src="images/schetsToevoegenAanVoorbeelden.png" alt="Voeg schets toe aan lijst van voorbeelden" /></p>
+
 <h2 id="opties-voor-verbetering">Opties voor verbetering</h2>
 
 <p>Vormen worden beter vergelijkbaar als we ze een zelfde grootte geven en zorgen dat ze allemaal hetzelfde middelpunt hebben.</p>
