herkennen van schets toegevoegd

--- a/index.html
+++ b/index.html
@@ -121,6 +121,14 @@ Eenmalig heb ik een variabele <strong>voorbeelden</strong> aangemaakt en <em>ge√
 
 <p><img src="images/schetsToevoegenAanVoorbeelden.png" alt="Voeg schets toe aan lijst van voorbeelden" /></p>
 
+<h3 id="een-schets-herkennen-binnen-een-voorbeelden-lijst">Een schets herkennen binnen een voorbeelden lijst</h3>
+
+<p>Om verder te kunnen werken met het resultaat is er een functie met als invoer een gestandaardiseerde schets en lijst van voorbeelden. De uitvoer is de <em>naam</em> van het voorbeeld dat het <em>beste past</em>.</p>
+
+<p><img src="images/functieAanroepHerkenSchets.png" alt="Aanroep functie herken schets met voorbeelden" /></p>
+
+<p><img src="images/schetsOpzoekenInVoorbeelden.png" alt="Definitie functie herken schets met voorbeelden" /></p>
+
 <h2 id="opties-voor-verbetering">Opties voor verbetering</h2>
 
 <p>Vormen worden beter vergelijkbaar als we ze een zelfde grootte geven en zorgen dat ze allemaal hetzelfde middelpunt hebben.</p>
