subkopje vector rekenen

--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@ Eenmalig heb ik een variabele <strong>voorbeelden</strong> aangemaakt en <em>ge√
 <p>Een vorm ziet er hetzelfde uit wanneer je schets van punt 1 tot laatst tekent, of in omgekeerde richting. Sommige figuren worden door verschillende mensen in verschillende richting getekend. Die vromen zien er dan hetzelfde uit maart hebben relatief grote onderlinge afstand omdat eigenlijk de verkeerde punten met elkaar vergeleken worden. Een begin van een oplossing checkt een neiuwe vorm niet alleen tegen alle reeds bekende voorbeelden, maar ook hun omkering:<br/>
 <img src="images/omkeringSchets.png" alt="Omkering van een schets" /></p>
 
+<h3 id="met-lijsten-kan-je-optellen-en-vermenigvuldigen">Met lijsten kan je optellen en vermenigvuldigen</h3>
+
 <p><em>Snap!</em> is uitermate handig voor het manipuleren van lijsten, als je bijvoorbeeld een <em>getal</em> optelt bij een lijst getallen, krijg je een lijst waarbij bij alle elementen dat getal is opgeteld. Dat werkt ook met paren getallen. En het werkt ook met vermenigvuldigen!<br/>
 Probeer eens de volgende tekeninstructies uit:</p>
 
