--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ html,body,#wrapper{font-size:10pt!important}
 
 
   </head>
-<body class="normal">
+<body class="normal firstload">
   <div id="wrapper">
 <h1 id="grand-gesture">Grand gesture</h1>
 
@@ -80,7 +80,7 @@ html,body,#wrapper{font-size:10pt!important}
 
 <h3 id="muis-indrukken-om-te-starten">Muis indrukken om te starten</h3>
 
-<p>Zodra er ergens op het canvas de muis wordt ingedrukt, willen we dat ons programma start. We kunnen dit eenvoudig bereiken door het <strong>speelveld</strong> te prograameren om een signaal te sturen als de muis wordt ingedrukt. De <strong>sprite</strong>, die we sensor zouden kunnen noemen, moet dan in actie komen als dat signaal binnenkomt.</p>
+<p>Zodra er ergens op het canvas de muis wordt ingedrukt, willen we dat ons programma start. We kunnen dit eenvoudig bereiken door het <strong>speelveld</strong> te programmeren om een signaal te sturen als de muis wordt ingedrukt. De <strong>sprite</strong>, die we sensor zouden kunnen noemen, moet dan in actie komen als dat signaal binnenkomt.</p>
 
 <p><img src="images/indrukkenVoorStart.png" alt="Indrukken voor start" /></p>
 
@@ -110,7 +110,7 @@ html,body,#wrapper{font-size:10pt!important}
 
 <p>Het blijkt nog best lastig te zijn om helder uit te leggen hoe je een schets met, zeg, 150 punten <em>resampled</em> naar 64 punten. Het idee is in grote lijnen om eerste de lengte van de schets te bepalen, door de lengtes van alle segmenten bij elkaar op te tellen. Vervolgens deel je die lengte door het gewenste aantal punten min één, om de afstand te bepalen tussen de punten in de nieuwe lijst. Daarna loop je de oude schets af, waarbij je na iedere <em>segment lengte</em> een nieuw punt aan de lijst toevoegt.</p>
 
-<p>Heronder zie je de complete code. Je kan die ook <a href="https://github.com/xota/grandGesture/images/beperkSchetsTotAantalPunten.xml">downloaden</a> en vervolgens in je eigen project importeren met import of door slepen vanuit downloadmap naar Snap!-project. Wie tijd over heeft bouwt het zelf met deze afbeelding als leidraad.</p>
+<p>Heronder zie je de complete code. Je kan deze afbeelding (een <em>.png</em> bestand) downloaden naar je computer en vervolgens importeren in je eigen project door slepen vanuit downloadmap naar Snap!-project. Wie tijd over heeft bouwt het zelf met deze afbeelding als leidraad.</p>
 
 <p><img src="images/beperkSchetsTotAantalPunten.png" alt="Beperk schets tot aantal punten" /></p>
 
